plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

application {
    mainClass.set("com.test.Lab3TddApplication")
}
group = 'com.test'
version = '0.0.1-SNAPSHOT'
description = 'lab3tdd'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.opencsv:opencsv:5.8'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

test {
    useJUnitPlatform()

    // Enable preview features (Java 23)
    jvmArgs '--enable-preview'
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        html.requried = true
        xml.requried = false
        csv.requried = false
    }
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}